<?xml version="1.0" encoding="utf-8"?>
    <layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.AirtimeFragment">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <at.markushi.ui.CircleButton
                    android:id="@+id/logout"
                    android:layout_width="64dip"
                    android:layout_height="64dip"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/ic_action_logout"
                    app:cb_color="@color/white"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="16dp"
                    app:cb_pressedRingWidth="8dip" />

                <TextView
                    android:id="@+id/text"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="64dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:textSize="24sp"
                    android:text="Click to buy Airtime"
                    app:layout_constraintEnd_toStartOf="@+id/logout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/button"
                    style="@style/amountButtons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="136dp"
                    android:text="@string/one"
                    app:layout_constraintBaseline_toBaselineOf="@+id/button2"
                    app:layout_constraintStart_toStartOf="@+id/text"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    style="@style/amountButtons"
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="124dp"
                    android:text="@string/two"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.758"
                    app:layout_constraintStart_toEndOf="@+id/button"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    style="@style/amountButtons"
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/three"
                    app:layout_constraintBaseline_toBaselineOf="@+id/button4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button" />

                <Button
                    style="@style/amountButtons"
                    android:id="@+id/button4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="88dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/four"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.9"
                    app:layout_constraintStart_toEndOf="@+id/button3"
                    app:layout_constraintTop_toBottomOf="@+id/button2" />

                <Button
                    style="@style/amountButtons"
                    android:id="@+id/button5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/five"
                    app:layout_constraintBaseline_toBaselineOf="@+id/button6"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button3" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="88dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/six"
                    style="@style/amountButtons"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.9"
                    app:layout_constraintStart_toEndOf="@+id/button5"
                    app:layout_constraintTop_toBottomOf="@+id/button4" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>
    </layout>