<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.firstFive.HoorayFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/hooray_"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="120dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="120dp"
                android:gravity="top"
                android:text="@string/hooray_"
                android:textAppearance="@style/hooray_"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/you_will_no"
                android:layout_width="265dp"
                android:layout_height="106dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:gravity="center_horizontal|top"
                android:text="@string/you_will_no"
                android:textAppearance="@style/you_will_no"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hooray_" />

            <Button
                android:id="@+id/rectangle_1"
                android:layout_width="155dp"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="102dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="102dp"
                android:background="@drawable/btnbg"
                android:elevation="4dp"
                android:gravity="center"
                android:text="@string/start_again"
                android:textAppearance="@style/start_again"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/you_will_no" />

            <Button
                android:id="@+id/rectangle_2"
                android:layout_width="155dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="103dp"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="102dp"
                android:background="@drawable/rectangle_2"
                android:elevation="4dp"
                android:text="@string/view_other_"
                android:textAppearance="@style/view_other_"
                android:gravity="center_horizontal|top"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rectangle_1" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>